fixed mobile transitin aged youth wrapping

--- a/app/javascript/src/stylesheets/pages/supervisors.scss
+++ b/app/javascript/src/stylesheets/pages/supervisors.scss
@@ -11,13 +11,6 @@ $indicator_positive_color: #4caf50;
       flex-grow: 1;
     }
 
-    &:last-child {
-      margin: auto;
-      background-color: #cfd8dc;
-      border-radius: 100vw;
-      padding: 0.2em 1em;
-    }
-
     span {
       padding-top: .25em;
       text-align: center;
@@ -28,10 +21,17 @@ $indicator_positive_color: #4caf50;
         border-top-left-radius: 0.25em;
       }
 
-      &:last-child {
+      &:nth-child(2) {
         background: $indictator_negative_color;
         border-bottom-right-radius: 0.25em;
         border-top-right-radius: 0.25em;
+      }
+
+      &:last-child {
+        margin-left: 0.5em;
+        background-color: #cfd8dc;
+        border-radius: 100vw;
+        padding: 0.2em 1em;
       }
     }
   }
@@ -40,11 +40,11 @@ $indicator_positive_color: #4caf50;
     align-items: center;
     margin-bottom: 0.25rem;
 
-    div:last-child {
-      padding: .5em;
-    }
-
     span {
+      &:last-child {
+        padding: .5em;
+      }
+
       padding: .5em 1em;
       flex-grow: 1;
     }
